Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-15114

Warning about huge text files is pointless for really huge text files

XMLWordPrintable

    • a12acc6290987f7e15572ad684a288c6feab5471 36f5545f5a150b60b363a0ffb8d03aac79a9715b c5ba98b0edb5cc9b2e78f3ea16a5acbd784fd1e2 (qt-creator/qt-creator/master)

      1. Try to open a text file bigger than 48 MiB in Creator.
        Creator will show a warning:
      2. Click "Yes".
        Creator will quickly open the file in a binary editor.
        If a file is bigger than EditorManager::maxTextFileSize(), this message box is pointless because the file will be opened in a binary editor anyway.

      The warning should not be shown for files bigger than 48 MiB. Files that are too big for the C++-editor but smaller than 48 MiB could be displayed in the plain text editor.

        For Gerrit Dashboard: QTCREATORBUG-15114
        # Subject Branch Project Status CR V

            davschul David Schulz
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes