Core: skip text file size warning

... if the size exseeds our harcoded text file size limit and it is
opened in the binary editor anyway.

Fixes: QTCREATORBUG-15114
Change-Id: Ic806f425c2cf14632885c990bd5733a0abb17366
Reviewed-by: Eike Ziller <eike.ziller@qt.io>